# cashup

admin-backend/: .env.example  README.md  app.js  package.json  possible-options.json  utils.js
admin-backend/controllers/: context.js  continue-training.js  index.js  options.js  pause-training.js  reset.js  restart-training.js  start-training.js  train.js
admin-backend/modules/: redis.js
admin-frontend/: .env.example  .gitignore  README.md  jsconfig.json  package.json
admin-frontend/components/: button.jsx  button.module.scss  chart.jsx  full-screen.jsx  full-screen.module.scss  input.jsx  input.module.scss  left-bottom-pane.jsx  left-bottom-pane.module.scss  left-top-pane.jsx  left-top-pane.module.scss  right-bottom-pane.jsx  right-bottom-pane.module.scss  right-top-pane.jsx  right-top-pane.module.scss  select.jsx  select.module.scss
admin-frontend/contexts/: websocket-context.jsx
admin-frontend/filters/: index.js  to-epoch.js  to-loss.js  to-time.js
admin-frontend/layouts/: default.jsx
admin-frontend/pages/: _app.jsx  _app.scss  index.jsx  index.module.scss
core/: .gitignore  CMakeLists.txt  README.md
core/scripts/: download_from_dutascopy.py  install-hiredis.sh  install.sh  prepare_and_run.py
core/src/: Math.cpp  Math.hpp  Network.cpp  Network.hpp  Redis.cpp  Redis.hpp  main.cpp
